pip3 for faiss Docker container with Jupyter support

--- a/faiss/Dockerfile.jupyter
+++ b/faiss/Dockerfile.jupyter
@@ -3,4 +3,8 @@ FROM faiss:${FAISS_VERSION}
 
 LABEL maintainer=binwei.yang@gmail.com
 
-RUN pip install jupyter
+WORKDIR /opt/faiss
+COPY ./requirements.txt .
+RUN pip3 install -r ./requirements.txt
+
+RUN pip3 install jupyter
