--- a/tensorflow/Dockerfile.jupyter
+++ b/tensorflow/Dockerfile.jupyter
@@ -3,4 +3,21 @@ FROM tensorflow:${TF_VERSION}
 
 LABEL maintainer=binwei.yang@gmail.com
 
-RUN pip3 install matplotlib jupyter
+RUN apt-get install -y git wget unzip
+
+RUN ln -s /usr/bin/python3 /usr/bin/python
+
+RUN pip3 install Cython contextlib2 Pillow lxml matplotlib jupyter
+
+WORKDIR /opt
+
+RUN wget -O protobuf.zip https://github.com/google/protobuf/releases/download/v3.0.0/protoc-3.0.0-linux-x86_64.zip && unzip protobuf.zip
+
+RUN git clone https://github.com/tensorflow/models
+
+WORKDIR /opt/models/research
+RUN /opt/bin/protoc object_detection/protos/*.proto --python_out=.
+
+ENV PYTHONPATH /opt/models/research:/opt/models/research/slim
+
+RUN python object_detection/builders/model_builder_test.py
